--- a/src/global.less
+++ b/src/global.less
@@ -30,6 +30,9 @@ ul,
 ol {
   list-style: none;
 }
+.vm-search {
+  margin-bottom: 16px;
+}
 
 // 数据列表 样式
 .table-alert {
@@ -74,6 +77,7 @@ ol {
     display: block;
     margin-bottom: 24px;
     white-space: nowrap;
+    text-align: right;
   }
 }
 
